# snake

./: CMakeLists.txt  main.cpp
common/: Exception.cpp  Exception.h  NoCopyable.h  system.h
game/: Action.h  ConsoleRender.cpp  ConsoleRender.h  Event.h  IActionObserver.h  IEventObserver.h  IEventSubject.cpp  IEventSubject.h  IManager.cpp  IManager.h  IModel.h  IState.h  IView.h  PlayerManager.cpp  PlayerManager.h  SnakeGame.cpp  SnakeGame.h  State.h
game/states/: MainMenu.cpp  MainMenu.h  SettingsMenu.cpp  SettingsMenu.h
log/: Logger.cpp  Logger.h  Options.cpp  Options.h
